@@ -143,7 +143,7 @@ def execute_tests(package, configuration, options, output_buffer):
                             (package.get_description(), options.buildmode))
         print_message("\tIgnored")
         return 0
-    variation_args = configuration.get_variations(options.buildmode, options.excludedVariations)
+    variation_args = configuration.get_variations(options.buildmode, options.excludedVariations, options.bitDepth)
     if len(variation_args) == 0:
         output_buffer.write("IGNORED: Package '%s' has no configuration with the current options\n" %
                             package.get_description())
@@ -244,6 +244,7 @@ if __name__ == "__main__":
     optParser.add_option("--noinitialclean", "-i", dest="noInitialClean", action="store_true", default=False, help="Disable cleaning packages before running tests")
     optParser.add_option("--forcedefinitionupdate", "-f", dest="forceDefinitionUpdate", action="store_true", default=False, help="Force definition file updates")
     optParser.add_option("--excludevariation", "-x", dest="excludedVariations", action="append", default=None, help="Exclude a variation from the test configurations")
+    optParser.add_option("--C.bitdepth", dest="bitDepth", action="store", default="*", help="Build bit depth to test")
     optParser.add_option("--repo", "-r", dest="repos", action="append", default=[bam_dir], help="Add a package repository to test")
     optParser.add_option("--nodefaultrepo", dest="nodefaultrepo", action="store_true", default=False, help="Do not test the default repository")
     test_option_setup(optParser)
